# diary-widget

./: index.html  package-lock.json  package.json
docs/superpowers/specs/: 2026-03-27-aesthetic-and-functionality-improvement-design.md
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  diary.rs  main.rs
src/components/: Toast.jsx
