[package]
name = "diary-widget"
version = "0.1.0"
description = "Desktop diary widget"
authors = ["liyu8"]
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
